--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -5,15 +5,22 @@
     android:layout_height="match_parent"
     tools:context="com.example.doublepannellayout.MainActivity$PlaceholderFragment" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="166dp"
-        android:background="@drawable/ic_launcher"
-        android:gravity="center"
-        android:text="first"
-        android:textColor="@android:color/white" />
+        android:layout_height="166dp" 
+        android:background="#0f0"
+        android:id="@+id/container1">
 
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="Button" />
+        
+    </RelativeLayout>
+   
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -23,13 +30,20 @@
         android:text="second"
         android:textColor="@android:color/white" />
 
-    <TextView
-        android:id="@+id/textView3"
+   <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:background="@drawable/ic_launcher"
-        android:gravity="center"
-        android:text="third"
-        android:textColor="@android:color/white" />
+        android:layout_height="match_parent" 
+        android:background="#00f"
+        android:id="@+id/container1">
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="Button" />
+        
+    </RelativeLayout>
 
 </com.example.doublepannellayout.DoubleDraggedPanelLayout>
