--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.doublepannellayout.MainActivity"
+    tools:context="tm.soft.activity.MainActivity"
     tools:ignore="MergeRootFrame" />
